# Kubeflow_MNIST

./: .gitignore  README.md  build.sh  commands.txt  dockerfile  error.txt  first_run.sh  image_transform.py  istio-minimal-operator.yaml  kfserving-component.yaml  minio-secret.yaml  pipeline_dev.py  predict.sh  predictions.py  pyproject.toml  requirements.txt  second_run.sh  third_run.sh
components/: download_component.py  evaluate_component.py  export_component.py  train_component.py
