[tool.poetry]
name = "kubeflow_mnist"
version = "0.1.0"
description = ""
authors = ["aleksandr6463 <drobnov1994@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
kfp = "^1.8.0"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
